add README, styling, and change time format

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -1,5 +1,11 @@
+.mealListContainer {
+  display: flex;
+  flex-flow: wrap;
+}
+
 .mealTile {
   border: solid 2px black;
   border-radius: 15px;
   padding: 5px;
+  margin: 5px;
 }
