adjust styling, adjust background color of meal tiles by day of the week

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -3,9 +3,53 @@
   flex-flow: wrap;
 }
 
-.mealTile {
+.mealTile0, .mealTile1, .mealTile2, .mealTile3, .mealTile4, .mealTile5, .mealTile6,  {
+  background-image: linear-gradient(#b2cfff, white);
   border: solid 2px black;
   border-radius: 15px;
-  padding: 5px;
+  padding: 15px;
   margin: 5px;
+}
+.mealTile1 {
+  background-image: linear-gradient(#b2fff7, white);
+}
+.mealTile2 {
+  background-image: linear-gradient(#b2ffb7, white);
+}
+.mealTile3 {
+  background-image: linear-gradient(#eeffb2, white);
+}
+.mealTile4 {
+  background-image: linear-gradient(#ffe9b2, white);
+}
+.mealTile5 {
+  background-image: linear-gradient(#ffb2b2, white);
+}
+.mealTile6 {
+  background-image: linear-gradient(#ffbce7, white);
+}
+
+.inputForm0, .inputForm1, .inputForm2, .inputForm3, .inputForm4, .inputForm5, .inputForm6,  {
+  background-color: #b2cfff;
+  border-radius: 15px;
+  padding: 15px;
+  margin: 5px;
+}
+.inputForm1 {
+  background-color: #b2fff7;
+}
+.inputForm2 {
+  background-color: #b2ffb7;
+}
+.inputForm3 {
+  background-color: #eeffb2;
+}
+.inputForm4 {
+  background-color: #ffe9b2;
+}
+.inputForm5 {
+  background-color: #ffb2b2;
+}
+.inputForm6 {
+  background-color: #ffbce7;
 }
